# s21_matrix.hpp

./: CMakeLists.txt  Makefile
src/: s21_matrix_oop.cc  s21_matrix_oop.h
tests/: s21_matrix_test.h  unit_tests.cc
tests/function-tests/: matrix_calc_complements_function_tests.cc  matrix_determinant_function_tests.cc  matrix_eq_function_tests.cc  matrix_inverse_function_tests.cc  matrix_mult_matrix_function_tests.cc  matrix_mult_number_function_tests.cc  matrix_sub_function_tests.cc  matrix_sum_function_tests.cc  matrix_transpose_function_tests.cc
tests/operator-tests/: matrix_assignment_operator_tests.cc  matrix_mult_matrix_assignment_operator_tests.cc  matrix_mult_matrix_operator_tests.cc  matrix_mult_number_assignment_operator_tests.cc  matrix_mult_number_operator_tests.cc  matrix_parentheses_operator_tests.cc  matrix_sub_assignment_operator_tests.cc  matrix_sub_operator_tests.cc  matrix_sum_assignment_operator_tests.cc  matrix_sum_operator_tests.cc
tests/other-tests/: matrix_accessor_tests.cc  matrix_constructors_tests.cc  matrix_mutators_tests.cc
